# glium_tutorial_but_its_rendy

./: Cargo.toml
src/: main.rs
src/shaders/: shader.frag  shader.vert
