[package]
name = "glium_tutorial_but_its_rendy"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.0"
failure = "0.1.5"
lazy_static = "1.4.0"
log = "0.4.8"
winit = "0.20.0-alpha3"

[dependencies.rendy]
git = "https://github.com/amethyst/rendy"
branch = "release-0.4"
default-features = false
features = ["base", "shader-compiler", "spirv-reflection", "texture-image", "vulkan"]
